# resume-parser-layoutLM

./: .gitignore  README.md  docling.py  main.py  pyproject.toml
