[project]
name = "resume-parser-layoutlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "easyocr>=1.7.2",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "python-docx>=1.2.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
